Nova versió de Apache PDFBOX - 3.0 Canviat ms convalidacions per a poder fer upload al ms de core /** TODO - Falta modificar l'enviament de correu electrònic. **/