@@ -1,5 +1,3 @@
-package cat.politecnicllevant.convalidacions.pdf.service.pdf;
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -17,7 +15,24 @@ package cat.politecnicllevant.convalidacions.pdf.service.pdf;
  * limitations under the License.
  */
 
-import org.bouncycastle.asn1.*;
+package cat.politecnicllevant.convalidacions.pdf.service.pdfbox;
+
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.ArrayList;
+import java.util.List;
+
+import org.bouncycastle.asn1.ASN1Encodable;
+import org.bouncycastle.asn1.ASN1EncodableVector;
+import org.bouncycastle.asn1.ASN1ObjectIdentifier;
+import org.bouncycastle.asn1.ASN1Primitive;
+import org.bouncycastle.asn1.DERSet;
 import org.bouncycastle.asn1.cms.Attribute;
 import org.bouncycastle.asn1.cms.AttributeTable;
 import org.bouncycastle.asn1.cms.Attributes;
@@ -26,16 +41,6 @@ import org.bouncycastle.cms.CMSSignedData;
 import org.bouncycastle.cms.SignerInformation;
 import org.bouncycastle.cms.SignerInformationStore;
 import org.bouncycastle.tsp.TimeStampToken;
-
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.ArrayList;
-import java.util.List;
 
 /**
  * This class wraps the TSAClient and the work that has to be done with it. Like Adding Signed
@@ -52,19 +57,21 @@ public class ValidationTimeStamp
      * @param tsaUrl The url where TS-Request will be done.
      * @throws NoSuchAlgorithmException
      * @throws MalformedURLException
+     * @throws URISyntaxException
      */
-    public ValidationTimeStamp(String tsaUrl) throws NoSuchAlgorithmException, MalformedURLException
+    public ValidationTimeStamp(String tsaUrl)
+            throws NoSuchAlgorithmException, MalformedURLException, URISyntaxException
     {
         if (tsaUrl != null)
         {
             MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            this.tsaClient = new TSAClient(new URL(tsaUrl), null, null, digest);
+            this.tsaClient = new TSAClient(new URI(tsaUrl).toURL(), null, null, digest);
         }
     }
 
     /**
      * Creates a signed timestamp token by the given input stream.
-     *
+     * 
      * @param content InputStream of the content to sign
      * @return the byte[] of the timestamp token
      * @throws IOException
@@ -94,7 +101,7 @@ public class ValidationTimeStamp
             newSigners.add(signTimeStamp(signer));
         }
 
-        // Because new SignerInformation is created, new SignerInfoStore has to be created
+        // Because new SignerInformation is created, new SignerInfoStore has to be created 
         // and also be replaced in signedData. Which creates a new signedData object.
         return CMSSignedData.replaceSigners(signedData, new SignerInformationStore(newSigners));
     }
@@ -128,7 +135,7 @@ public class ValidationTimeStamp
         Attributes signedAttributes = new Attributes(vector);
 
         // There is no other way changing the unsigned attributes of the signer information.
-        // result is never null, new SignerInformation always returned,
+        // result is never null, new SignerInformation always returned, 
         // see source code of replaceUnsignedAttributes
         return SignerInformation.replaceUnsignedAttributes(signer, new AttributeTable(signedAttributes));
     }
